--- a/style.css
+++ b/style.css
@@ -1168,3 +1168,7 @@ body, html {
   cursor: pointer;
   box-shadow: 0 10px 26px rgba(0,0,0,.25);
 }
+
+.leaflet-pane.mapNotePane .leaflet-interactive {
+  cursor: pointer;
+}
